--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@prisma/extension-accelerate": "^1.1.0",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.2.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
@@ -27,6 +28,7 @@
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
     "passport": "^0.7.0",
